# YTE

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Dependencies/: CMakeLists.txt
Dependencies/Bullet/: CMakeLists.txt
Dependencies/Bullet/Bullet3Collision/: CMakeLists.txt
Dependencies/Bullet/Bullet3Common/: CMakeLists.txt
Dependencies/Bullet/Bullet3Dynamics/: CMakeLists.txt
Dependencies/Bullet/Bullet3Geometry/: CMakeLists.txt
Dependencies/Bullet/Bullet3OpenCL/: CMakeLists.txt
Dependencies/Bullet/Bullet3Serialize/: CMakeLists.txt
Dependencies/Bullet/BulletCollision/: CMakeLists.txt
Dependencies/Bullet/BulletDynamics/: CMakeLists.txt
Dependencies/Bullet/BulletInverseDynamics/: CMakeLists.txt
Dependencies/Bullet/BulletSoftBody/: CMakeLists.txt
Dependencies/Bullet/LinearMath/: CMakeLists.txt  btAlignedObjectArray.h  btIDebugDraw.h  btScalar.h  btSerializer.h
Dependencies/Bullet/clew/: CMakeLists.txt
Dependencies/assimp/: CMakeLists.txt
Dependencies/assimp/code/: AssbinExporter.cpp  AssbinLoader.cpp  AssxmlExporter.cpp  C4DImporter.cpp  CMakeLists.txt  ColladaLoader.cpp  D3MFImporter.cpp  D3MFOpcPackage.cpp  IFCLoader.cpp  Q3BSPZipArchive.h  Version.cpp  XGLLoader.cpp
Dependencies/assimp/contrib/: CMakeLists.txt
Dependencies/assimp/include/: CMakeLists.txt
Dependencies/crunch/: CMakeLists.txt
Dependencies/crunch/inc/: crn_decomp.h
Dependencies/imgui/: CMakeLists.txt  ImGuizmo.cpp  ImGuizmo.h  imgui.h
Dependencies/stb/: CMakeLists.txt  stb_image.h  stb_image_write.h  stb_rect_pack.cpp  stb_rect_pack.h  stb_truetype.cpp  stb_truetype.h
Dependencies/vkel/: CMakeLists.txt  vkel.c  vkel.h
Documentation/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
Source/: CMakeLists.txt
Source/YTE/: CMakeLists.txt  YTE.natvis
Source/YTE/CSharp/: CMakeLists.txt  CSharpComponent.cpp  CSharpComponent.hpp  CSharpComponentFactory.cpp  CSharpComponentFactory.hpp  CSharpSystem.cpp  CSharpSystem.hpp  CSharp_CodeGenerator.cpp  CSharp_CodeGenerator.hpp  ForwardDeclarations.hpp
Source/YTE/Core/: Asset.cpp  Asset.hpp  AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Component.cpp  Component.hpp  ComponentFactory.hpp  ComponentSystem.cpp  ComponentSystem.h  ComponentSystem.hpp  Composition.cpp  Composition.hpp  ContentLoader.h  ContentSystem.h  CoreComponentFactoryInitialization.cpp  CoreComponentFactoryInitialization.cpp.orig  CoreComponentFactoryInitilization.hpp  Engine.cpp  Engine.hpp  EventHandler.cpp  EventHandler.hpp  ForwardDeclarations.hpp  JobSystem.cpp  JobSystem.h  Object.cpp  Object.hpp  Plugin.cpp  Plugin.hpp  PrivateImplementation.hpp  ScriptBind.cpp  ScriptBind.cpp.orig  ScriptBind.hpp  Space.cpp  Space.hpp  StaticIntents.hpp  TestComponent.cpp  TestComponent.hpp  Utilities.cpp  Utilities.hpp
Source/YTE/Event/: CMakeLists.txt  Events.cpp  Events.h  StandardEvents.cpp  StandardEvents.h
Source/YTE/GameComponents/: AddComponentToEngine.cpp  AddComponentToEngine.hpp  AudioTest.cpp  AudioTest.hpp  BasilDialogue.cpp  BasilDialogue.hpp  BasilMovement.cpp  BasilMovement.hpp  BasilTutorial.cpp  BasilTutorial.hpp  BoatController.cpp  BoatController.hpp  BoatParticles.cpp  BoatParticles.hpp  BoatPhysics.cpp  BoatPhysics.hpp  Button.cpp  Button.hpp  CMakeLists.txt  CMakeLists.txt.orig  CameraAnchor.cpp  CameraAnchor.hpp  CameraBoom.cpp  CameraBoom.hpp  CameraController.cpp  CameraController.hpp  Credits.cpp  Credits.hpp  DaisyDialogue.cpp  DaisyDialogue.hpp  DaisyMovement.cpp  DaisyMovement.hpp  DaisyTutorial.cpp  DaisyTutorial.hpp  Dialogue.cpp  Dialogue.hpp  DialogueDirector.cpp  DialogueDirector.hpp  DialogueElement.cpp  DialogueElement.hpp  (+64 more)
Source/YTE/Graphics/: Animation.cpp  Animation.hpp  BaseModel.cpp  BaseModel.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Drawers.cpp  Drawers.hpp  FFT_WaterSimulation.cpp  FFT_WaterSimulation.hpp  FacialAnimator.cpp  FacialAnimator.hpp  FlybyCamera.cpp  FlybyCamera.hpp  ForwardDeclarations.hpp  GPUBuffer.cpp  GPUBuffer.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  GraphicsView.cpp  GraphicsView.hpp  ImguiContext.cpp  ImguiContext.hpp  ImguiLayer.cpp  ImguiLayer.hpp  InfluenceMap.cpp  InfluenceMap.hpp  InstantiatedInfluenceMap.cpp  InstantiatedInfluenceMap.hpp  InstantiatedLight.cpp  InstantiatedLight.hpp  InstantiatedMesh.hpp  Light.cpp  Light.hpp  LightManager.cpp  LightManager.hpp  LineDrawer.cpp  LineDrawer.hpp  Material.cpp  (+24 more)
Source/YTE/Lua/: CMakeLists.txt  Class.cpp  Class.hpp  LuaComponent.cpp  LuaComponent.hpp  LuaLibraryInclude.hpp  LuaScriptLoader.cpp  LuaScriptLoader.hpp  LuaSystem.cpp  LuaSystem.hpp
Source/YTE/Math/: CMakeLists.txt  Complex.hpp  Complex_KISSFFT.hpp  Constants.hpp  Random.hpp  Values.hpp  VertexTypes_FFT.hpp
Source/YTE/Meta/: Attribute.cpp  Attribute.hpp  CMakeLists.txt  Field.hpp  ForwardDeclarations.hpp  Function.cpp  Function.hpp  Meta.hpp  Property.hpp  Reflection.hpp  Type.cpp  Type.hpp
Source/YTEMain/: CMakeLists.txt  YTEMain.cpp  YTEMain.hpp
Source/YTEPlayer/: CMakeLists.txt  YTEPlayer.rc  main.cpp
Source/YTETools/: CMakeLists.txt  ImportMathTypeConverters.hpp  YTEAnimation.cpp  YTEAnimation.hpp  YTEMesh.cpp  YTEMesh.hpp  YTESkeleton.cpp  YTESkeleton.hpp  YTESkeletonInternal.hpp  YTETexture.cpp  YTETexture.hpp  YTEToolsMeta.hpp
Source/YTEditor/: ArchetypeTools.cpp  ArchetypeTools.hpp  CMakeLists.txt  Commands.cpp  Commands.hpp  ComponentBrowser.cpp  ComponentProperty.hpp  ComponentSearchBar.cpp  ComponentSearchBar.hpp  ComponentTools.cpp  ComponentTools.hpp  ComponentTree.cpp  ComponentWidget.cpp  ComponentWidget.hpp  EditMenu.cpp  EditorPlugin.cpp  EditorPlugin.hpp  FileMenu.cpp  FileMenu.hpp  ForwardDeclarations.hpp  GameObjectMenu.cpp  GameWindow.cpp  GameWindow.hpp  ImportMenu.cpp  ImportMenu.hpp  LevelMenu.cpp  LevelMenu.hpp  MaterialViewer.cpp  MaterialViewer.hpp  ObjectBrowser.cpp  ObjectBrowser.hpp  ObjectItem.cpp  ObjectItem.hpp  OutputConsole.cpp  PropertyWidget.hpp  SearchBarEventFilter.cpp  WWiseWidget.cpp  WWiseWidget.hpp  WinMain.cpp  WindowsMenu.cpp  (+6 more)
Source/YTEditorPlayer/: .editorconfig  CMakeLists.txt  main.cpp
Tools/: clean.bat  (+1 more)
(+770 files in other folders)
