set(Source_Root ${CMAKE_CURRENT_SOURCE_DIR})
set(YTE_Root ${Source_Root}/YTE)
set(YTEditor_Root ${Source_Root}/YTEditor)
set(YTEPlayer_Root ${Source_Root}/YTEPlayer)
set(YTEditorPlayer_Root ${Source_Root}/YTEditorPlayer)
set(YTEMain_Root ${Source_Root}/YTEMain)
set(CMake_Include ${Source_Root}/cmake)

add_subdirectory(YTE)
add_subdirectory(YTEditor)
add_subdirectory(YTEditorPlayer)
add_subdirectory(YTEPlayer)
add_subdirectory(YTEMain)
